# CourseCrafter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: deps.py  main.py  routes.py  settings.py
app/agents/: module_writer.py  schemas.py  workflow.py
app/agents/llm/: base.py  client.py  groq.py  ollama.py
app/auth/: deps.py  hashing.py  routes.py  sessions.py
app/courses/: routes.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 359e9a621e25_add_courses_and_course_modules.py  48e1ed9ac0f3_add_course_pdf_path.py  510517af1360_remove_course_pdf_path.py  6eb0dd41e053_added_roadmap_relation_to_course.py  8ebe93ec01a8_add_roadmaps_and_generation_runs.py  9099800320a3_create_users_table.py  bb446d234524_images_vidoes_added_to_content.py  c9391ece59ad_generation_model_updated_with_text.py  de74fd253366_add_course_id_to_generation_runs.py  e4e549248367_update_users_table.py  (+2 more)
app/db/models/: __init__.py  course.py  course_module.py  generation_run.py  roadmap.py  session_token.py  user.py
app/exceptions/: custom_exception.py
app/generation/: routes.py
app/graphs/: course_generation.py
app/jobs/: celery_app.py  run_store.py  tasks.py  worker.py
app/logger/: __init__.py  custom_logger.py
app/roadmaps/: routes.py
app/static/: app.css
app/static/css/: styles.css
app/templates/: base.html  course_view.html  courses_edit.html  courses_list.html  dashboard.html  home.html  login.html  register.html  roadmap_detail.html  roadmap_new.html  roadmaps_list.html
tests/: README.md  conftest.py
tests/integration/: test_auth.py  test_generation.py  test_security.py
tests/unit/: test_agents.py  test_models_simple.py  test_security.py  test_tasks.py
