[project]
name = "coursegenerate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.2.0",
    "boto3==1.34.160",
    "celery==5.3.6",
    "fastapi==0.115.6",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "sqlalchemy==2.0.32",
    "starlette-csrf>=3.0.0",
    "uvicorn[standard]==0.30.6",
    "weasyprint==62.3",
]
