[project]
name = "coursegenerate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis==2.0.1",
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "bcrypt==4.2.0",
    "boto3==1.34.160",
    "celery==5.3.6",
    "fastapi==0.115.6",
    "httpx==0.27.0",
    "jinja2==3.1.4",
    "langchain-core>=1.2.14",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "openai>=1.0.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart==0.0.9",
    "redis==5.0.8",
    "sqlalchemy==2.0.32",
    "starlette-csrf>=3.0.0",
    "structlog>=25.5.0",
    "uvicorn[standard]==0.30.6",
    "weasyprint==62.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]
